--- a/CommandPatternTutorial/CommandPatternTutorial.csproj
+++ b/CommandPatternTutorial/CommandPatternTutorial.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractCommand\ICommand.cs" />
+    <Compile Include="ConcreteCommand\LightOff.cs" />
+    <Compile Include="ConcreteCommand\LightOn.cs" />
+    <Compile Include="Invoker\RemoteController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receiver\AirConditioner.cs" />
@@ -51,9 +54,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ConcreteCommand\" />
-    <Folder Include="Invoker\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
